--- a/readme
+++ b/readme
@@ -20,9 +20,9 @@ then pop o2 off the stack, onto the output queue;
 		If the token at the top of the stack is a function token, pop it onto the output queue.
 		If the stack runs out without finding a left parenthesis, then there are mismatched parentheses.
 When there are no more tokens to read:
-	While there are still operator tokens in the stack:
-		If the operator token on the top of the stack is a parenthesis, then there are mismatched parentheses.
-		Pop the operator onto the output queue.
+While there are still operator tokens in the stack:
+	If the operator token on the top of the stack is a parenthesis, then there are mismatched parentheses.
+	Pop the operator onto the output queue.
 Exit.
 
 
@@ -32,6 +32,7 @@ While there are tokens to be read:
 	If the token is a function token, then push it onto the stack.
 	If the token is a function argument separator (e.g., a comma):
 		Until the token at the top of the stack is a left parenthesis, pop operators off the stack onto the output queue. If no left parentheses are encountered, either the separator was misplaced or parentheses were mismatched.
+		#! Pop the left parenthesis from the stack, but not onto the output queue.
 		#! Place a function argument separator on the output queue.
 	If the token is an operator, o1, then:
 		while there is an operator token, o2, at the top of the stack, and
@@ -46,7 +47,7 @@ then pop o2 off the stack, onto the output queue;
 		If the token at the top of the stack is a function token, pop it onto the output queue.
 		If the stack runs out without finding a left parenthesis, then there are mismatched parentheses.
 When there are no more tokens to read:
-	While there are still operator tokens in the stack:
-		If the operator token on the top of the stack is a parenthesis, then there are mismatched parentheses.
-		Pop the operator onto the output queue.
+While there are still operator tokens in the stack:
+	If the operator token on the top of the stack is a parenthesis, then there are mismatched parentheses.
+	Pop the operator onto the output queue.
 Exit.
